--- a/src/css/PostCollection.module.css
+++ b/src/css/PostCollection.module.css
@@ -3,7 +3,6 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 0.4rem 0.8rem ;
     margin: 0.5rem;    
-    cursor: pointer;
     grid-template-rows: 1fr 1fr 1fr;
     min-height: 600px;
     
@@ -11,6 +10,10 @@
 .post {
     border-radius: 5px;
     position: relative;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .post:nth-child(2){
@@ -23,7 +26,6 @@
 
 .post img {
     width: 100%;
-    height: 100%;
     grid-area: 1/1;
     opacity: 0;
     transition: 0.4s;
